feat: allow setting commitment on Airdrop request
